update contrast issues

--- a/src/project.css
+++ b/src/project.css
@@ -31,6 +31,6 @@
 }
 
 .description {
-  color: blueviolet;
+  color: whitesmoke;
   font-size: 2vw;
 }
